--- a/Lecture0-Getting Started/Lecture0.html
+++ b/Lecture0-Getting Started/Lecture0.html
@@ -261,8 +261,8 @@ Elegant Graphics for Data Analysis</a></em></li>
 <h3 id="course-website">Course website:</h3>
 <ul>
 <li>Canvas: materials, assignments, code and grading</li>
-<li><a href="https://yumouqiu.github.io/DS202-Spring2022/"
-class="uri">https://yumouqiu.github.io/DS202-Spring2022/</a>:
+<li><a href="https://yumouqiu.github.io/DS202-Spring2023/"
+class="uri">https://yumouqiu.github.io/DS202-Spring2023/</a>:
 lectures</li>
 </ul>
 </section>
@@ -311,7 +311,7 @@ new information.</li>
 <section id="midterm" class="slide level2">
 <h2>Midterm</h2>
 <ul>
-<li>take-home programming exam.</li>
+<li>programming exam.</li>
 <li>limited time.</li>
 <li>open book, open note, open internet (no direct help from anyone
 else).</li>
