--- a/Lecture2-R-basics/01_r-basics.html
+++ b/Lecture2-R-basics/01_r-basics.html
@@ -452,8 +452,8 @@ class="slide level2 white">
 <p><img class="cover" src="images/blue.jpeg" alt="" width=2000></p>
 <p><span style="color:white">Write down questions that you could answer
 with this data 4 minutes by yourself, then push your questions to the
-“yumouqiu/classexample” repository, and we’ll show those ideas in
-Github.</p>
+“yumouqiu/DS202-inclass-practice” repository, and we’ll show those ideas
+in Github.</p>
 <p><span style="color:white">The types of crimes are defined on the UCR
 website, see <a href="http://www.ucrdatatool.gov/offenses.cfm"
 class="uri">http://www.ucrdatatool.gov/offenses.cfm</a></p>
