--- a/Lecture2-R-basics/07_radar-plot.html
+++ b/Lecture2-R-basics/07_radar-plot.html
@@ -203,20 +203,14 @@
 <ul>
 <li><span style="color:white">Choose <code>California</code> and
 <code>New York</code></span></li>
-<li><span style="color:white">Choose Year <code>1971</code> and
+<li><span style="color:white">Choose Year <code>1981</code> and
 <code>2016</code></span></li>
 <li><span style="color:white">Make a radar plot to compare
 <code>State</code>, <code>Year</code> and <code>Type</code> by the crime
 rate</span></li>
-<li><span style="color:white">Remove <code>Rape</code> and
-<code>Legacy.rape</code> for this plot</span></li>
+<li><span style="color:white">Remove <code>rape.legacy</code> and
+<code>rape.revised</code> for this plot</span></li>
 </ul>
-</section>
-<section id="solution" class="slide level2">
-<h2>Solution</h2>
-</section>
-<section id="solution-1" class="slide level2">
-<h2>Solution</h2>
 </section>
 
   <!--
