--- a/03_tidyverse/05_tidyr.html
+++ b/03_tidyverse/05_tidyr.html
@@ -5523,12 +5523,12 @@ by type of crime. Note: you need to exclude some variables. </span></li>
 </section>
 <section id="spread-works-as-inverse-of-gather" class="slide level2">
 <h2>Spread works as inverse of gather</h2>
-<p><img data-src="images/spread-gather-clean.png" /></p>
+<p><img src="images/spread-gather-clean.png" width=550></p>
 </section>
 <section id="front-part-is-not-identical---not-collapsible"
 class="slide level2">
 <h2>Front part is not identical - not collapsible</h2>
-<p><img data-src="images/spread-gather-unclean.png" /></p>
+<p><img src="images/spread-gather-unclean.png" width=550></p>
 </section>
 <section id="where-spread-is-tricky" class="slide level2">
 <h2>Where <code>spread</code> is tricky</h2>
